--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 Hi this is Sreejith Menon here. This is my first git repository.
 Added four files EAST , WEST, NORTH, SOUTH for others to work.
+Switched username.
 
